@@ -1,3 +1,7 @@
+2002-01-10  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/Date/Date.py: ISO fix.
+
 2002-01-09  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/vfs/zipfs.py, parfs.py: VFS tweaks.
